src/test/ui/static/static-mut-bad-types.stderr
error[E0308]: mismatched types
  --> $DIR/static-mut-bad-types.rs:5:13
   |
LL |         a = true;
   |         -   ^^^^ expected `isize`, found `bool`
   |         |
   |         expected due to the type of this binding

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
